# MandelbrotRenderer

./: .gitignore  README.md  pyproject.toml
mandelbrot_renderer/: main.py  mandelbrot_pillow.py  mandelbrotset.py  viewport.py
